--- a/images/debian-installer/Dockerfile
+++ b/images/debian-installer/Dockerfile
@@ -1,4 +1,4 @@
-# SteamCMD Pterodactyl Installer Image based on latest Debian 13 by LelieL91
+# SteamCMD Pterodactyl Installer Image based on latest Debian stable by LelieL91
 FROM        --platform=$TARGETOS/$TARGETARCH debian:trixie-slim
 
 LABEL       author="LelieL91" maintainer="admin@factotum.ovh"
@@ -11,7 +11,7 @@ ENV         DEBIAN_FRONTEND=noninteractive
 ## Update base packages + Install dependencies + Clean temp files + Configure locale
 RUN         apt update \
             && apt -y upgrade \
-            && apt -y --no-install-recommends install ca-certificates curl lib32gcc-s1 locales git wget jq unzip \
+            && apt -y --no-install-recommends install ca-certificates curl lib32gcc-s1 locales git wget jq unzip xz-utils \
             && apt clean \
             && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
             && apt -y autoremove \
