--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -2,8 +2,8 @@ name: Build Docker Images
 
 on:
   workflow_dispatch:
-  #schedule:
-    #- cron: "0 0 * * 1"
+  schedule:
+    - cron: "0 0 * * 1"
   push:
     branches:
       - main
