--- a/images/debian-games/Dockerfile
+++ b/images/debian-games/Dockerfile
@@ -11,7 +11,7 @@ ENV         DEBIAN_FRONTEND=noninteractive
 
 ## Update base packages + Install dependencies + Clean temp files + Configure locale
 RUN         apt update && apt -y upgrade && apt -y --no-install-recommends install \
-            ca-certificates locales iproute2 gdb tini \
+            ca-certificates curl locales iproute2 tini \
             && apt -y autoremove \
             && apt clean \
             && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
